# budgood-perimeter

./: CONTRIBUTING.md  LICENSE  README.md  README.zh.md  SPEC.md  perimeter.example.toml  pyproject.toml
.github/workflows/: ci.yml
budgood_perimeter/: __init__.py  cli.py  config.py  manifest.py  scan.py  staleness.py  survey.py  taint.py
docs/: ROADMAP.md  checklist.md  framework.md  validation.md
docs/assets/: README.md
examples/buddhist-kg/: README.md  attestations.jsonl  channels.jsonl  open_store_adapter.py  perimeter.toml
examples/buddhist-kg/wiring/: label_preserving_retrieval.py
examples/buddhist-kg/wiring/claude_code/: sessionstart_perimeter_staleness.py
examples/gitnexus/: README.md  channels.jsonl  perimeter.toml
tests/: test_manifest.py  test_survey.py  test_taint.py
tests/fixtures/: channels.jsonl  perimeter.toml
tests/fixtures/fakeproj/: fake_store.jsonl  not_a_channel.py  reader_a.py  reader_b.py  reader_c.py
