[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "budgood-perimeter"
version = "0.1.0"
description = "Perimeter governance engine: append-only, attested auditing of which channels touch a knowledge store. A governance-first complement to agentic loops."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
keywords = ["governance", "knowledge-base", "provenance", "append-only", "agents", "context-engineering", "audit"]
authors = [{ name = "budgood" }]
dependencies = ["tomli>=1.1.0; python_version < '3.11'"]

[project.urls]
Homepage = "https://github.com/budgood/budgood-perimeter"
Specification = "https://github.com/budgood/budgood-perimeter/blob/main/SPEC.md"

[project.scripts]
budgood-perimeter = "budgood_perimeter.cli:main"

[tool.setuptools]
packages = ["budgood_perimeter"]
